[project]
name = "jpg_leonai_api"
description = "Save Image JPG No Meta with text input field for API calls"
version = "1.0.0"
license = "MIT"

[project.urls]
Repository = "https://github.com/leonai7/jpg_save"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "leonai7"
DisplayName = "jpg_leonai_api"
Icon = ""
